test: expand scan-target with multiple obfuscation and typo-squatting cases

--- a/scan-target/package.json
+++ b/scan-target/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "expres": "^4.18.2",
-    "lodash": "^4.17.21"
+    "lodas": "^4.17.21",
+    "axios": "^1.6.0"
   }
 }
